# replicator-dynamics

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: replicator-dynamics.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  ess.py  jacobian.py  moran.py  mutations.py  replicator.py
src/viz/: __init__.py  app.py  simplex.py
tests/: test_ess.py  test_moran.py  test_replicator.py  test_stability.py
